@@ -19,6 +19,12 @@ public class DataRowModel {
     public static final int DOWNLOADING = 2;
     public static final int ERROR = 3;
 
+    /**
+     * Constructor of row model for data table.
+     * @param fileInfo Obtained from web service
+     * @param downloaded Boolean, whether is file already localy present
+     * @param location path to download folder of the exact experiment
+     */
     public DataRowModel(DataFileInfo fileInfo, int downloaded, String location) {
         selected = false;
         this.fileInfo = fileInfo;
@@ -28,30 +34,58 @@ public class DataRowModel {
         this.location = location;
     }
 
+    /**
+     * Getter whether is row selected.
+     * @return true/false
+     */
     public boolean isSelected() {
         return selected;
     }
 
+    /**
+     * Setter of row's selection.
+     * @param selected true/false
+     */
     public void setSelected(boolean selected) {
         this.selected = selected;
     }
 
+    /**
+     * Getter of furthure file information
+     * @return
+     */
     public DataFileInfo getFileInfo() {
         return fileInfo;
     }
 
+    /**
+     * Getter of file's local copy status.
+     * @return DataRowModel.HAS_COPY/NO_COPY/DOWNLOADING/ERROR
+     */
     public int getDownloaded() {
         return downloaded;
     }
 
+    /**
+     * Setter file's local copy status.
+     * @param downloaded DataRowModel.HAS_COPY/NO_COPY/DOWNLOADING/ERROR
+     */
     public void setDownloaded(int downloaded) {
         this.downloaded = downloaded;
     }
 
+    /**
+     * Getter of file's extension.
+     * @return vhdr,eeg,...
+     */
     public String getExtension() {
         return extension;
     }
 
+    /**
+     * Getter of file's experiment download folder path.
+     * @return path
+     */
     public String getLocation() {
         return location;
     }
